--- a/K8S/platforms-depl.yaml
+++ b/K8S/platforms-depl.yaml
@@ -4,7 +4,7 @@ metadata:
   name: platforms-depl
 spec:
   replicas: 1
-  selector: 
+  selector:
     matchLabels:
       app: platformservice
   template:
@@ -20,7 +20,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: platforms-clusterip-srv
-spec: 
+spec:
   type: ClusterIP
   selector:
     app: platformservice
@@ -29,4 +29,7 @@ spec:
       protocol: TCP
       port: 80
       targetPort: 80
-      
+    - name: platformgrpc
+      protocol: TCP
+      port: 666
+      targetPort: 666
